# batpu_vm

./: Cargo.toml  README.md
src/: assembler_test.txt  main.rs
src/assembler/: access_checker.rs  assembler.rs  assembly.rs  code_location.rs  compilation.rs  compiler.rs  diagnostic.rs  emulator.rs  file_reader.rs  lexer.rs  linker.rs  mod.rs  parser.rs  semantic_analyzer.rs  source_mapping.rs  string_file_reader.rs  symbol_table.rs  syntax.rs  token.rs  type_stream.rs
src/vm/: cpu.rs  memory.rs
