[package]
name = "bat_pu_21"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
num-bigint = "0.4.6"
phf = { version = "0.11.2", features = ["macros"] }


[profile.release]
opt-level = 3
debuginfo = 0 
lto = "y"
